@@ -2,10 +2,10 @@ AUX 5.5/startscript.sh 421 RMD160 6494dc2a8d810d37f9eea36b4cf759aea8ec92d9 SHA1 
 MD5 06cb85e3af52ad431914dd95f3ed4eff files/5.5/startscript.sh 421
 RMD160 6494dc2a8d810d37f9eea36b4cf759aea8ec92d9 files/5.5/startscript.sh 421
 SHA256 dfd619a0a71b28e17facb015e8d4be79c495361f29e97da4cf55ced7f3f87b5f files/5.5/startscript.sh 421
-AUX 6.0/config.sh 3119 RMD160 9718b945d46ee03775e23a3be521b410130acbc2 SHA1 eb51274bdb2afe88701a601f66c9df4848f2681f SHA256 e90dd5403989ff748396b9528ccf14418a1a059328bb005dcbd056e6aab1fb2b
-MD5 a4126ba2ab3ecc20a49a8298a4aa14bc files/6.0/config.sh 3119
-RMD160 9718b945d46ee03775e23a3be521b410130acbc2 files/6.0/config.sh 3119
-SHA256 e90dd5403989ff748396b9528ccf14418a1a059328bb005dcbd056e6aab1fb2b files/6.0/config.sh 3119
+AUX 6.0/config.sh 8047 RMD160 091344038bb330f36fbab2989b60c4cc7e4c697c SHA1 01180f091ee7ba52c819bf1a98b2aae27156acf9 SHA256 c6185df6af200e94b51425fa4b1498dddae1f5d8d52ae18f607cc6cc6449bcb7
+MD5 4de12ae0695df4ac533445cf62cbbf41 files/6.0/config.sh 8047
+RMD160 091344038bb330f36fbab2989b60c4cc7e4c697c files/6.0/config.sh 8047
+SHA256 c6185df6af200e94b51425fa4b1498dddae1f5d8d52ae18f607cc6cc6449bcb7 files/6.0/config.sh 8047
 AUX 6.0/netbeans-6.0_alpha20061023-gentoo.patch 1373 RMD160 40bdeed6c42432f63a903aa9f22fd8a63d75bdab SHA1 d4f047fe35a1d0781eca1293db4e1197b719ca09 SHA256 29d284101bee8b3d4139c9f887814b88cf5e3f4da17d3839aff3a2475edf6d37
 MD5 576bd3a67bb99c0b4ed84b590fa2d948 files/6.0/netbeans-6.0_alpha20061023-gentoo.patch 1373
 RMD160 40bdeed6c42432f63a903aa9f22fd8a63d75bdab files/6.0/netbeans-6.0_alpha20061023-gentoo.patch 1373
